# triangles

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json  readme.md
.github/workflows/: ci.yaml
end2end/: run_e2e.sh
end2end/answers/: ans3.txt  ans7.txt
end2end/tests/: test10.txt  test4.txt  test6.txt  test7.txt
include/: line.hpp  octo_tree.hpp  plane.hpp  point.hpp  triangles.hpp  utils.hpp  vector.hpp
src/: triangles.cpp
tests/: CMakeLists.txt  line_tests.cpp  octo_tree_test.cpp  octo_tree_tests.cpp  plane_tests.cpp  point_tests.cpp  short.cpp  triangles_tests.cpp  vector_tests.cpp
tests/geogebra/: segment_segment.ggb  triangle_segment.ggb
